force-app/main/default/objects/AnyAsciiMapping__c/AnyAsciiMapping__c.object-meta.xml
<CustomObject>
    <description>Many older systems do not accept foreign unicode characters. This object and invocable action attempt to &quot;transliterate&quot; strings into their American English equivalent.</description>
    <label>AnyAscii Mapping</label>
    <nameField>
        <displayFormat>ASCII-{00000000}</displayFormat>
        <label>AnyAscii Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AnyAscii Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>