force-app/main/default/objects/AnyAsciiMapping__c/fields/CodePoint__c.field-meta.xml
<CustomField>
    <fullName>CodePoint__c</fullName>
    <externalId>true</externalId>
    <label>Code Point</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>