force-app/main/default/objects/AnyAsciiMapping__c/fields/InputValue__c.field-meta.xml
<CustomField>
    <fullName>InputValue__c</fullName>
    <inlineHelpText>This field is set automatically by a trigger when Code Point is populated. Not used by the system to perform string conversions.</inlineHelpText>
    <label>Unicode Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>