force-app/main/default/objects/AnyAsciiMapping__c/fields/IsBlankSpace__c.field-meta.xml
<CustomField>
    <fullName>IsBlankSpace__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, the Unicode input is replaced with a single space (U+0020).</inlineHelpText>
    <label>Blank Space</label>
    <type>Checkbox</type>
</CustomField>