force-app/main/default/objects/AnyAsciiMapping__c/fields/OutputValue__c.field-meta.xml
<CustomField>
    <fullName>OutputValue__c</fullName>
    <label>ASCII Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>