force-app/main/default/objects/AnyAsciiMapping__c/validationRules/InvalidAsciiOutputValue.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidAsciiOutputValue</fullName>
    <active>true</active>
    <description>Ensures that the converted value is part of the ASCII character set.</description>
    <errorConditionFormula>NOT(REGEX(OutputValue__c, &quot;^[ -~]*$&quot;))</errorConditionFormula>
    <errorDisplayField>OutputValue__c</errorDisplayField>
    <errorMessage>Field contains one or more non-ASCII characters</errorMessage>
</ValidationRule>