force-app/main/default/objects/AnyAsciiMapping__c/validationRules/InvalidCodePoint.validationRule-meta.xml
<ValidationRule>
    <fullName>InvalidCodePoint</fullName>
    <active>true</active>
    <description>Requires that only numbers are used as the external ID.</description>
    <errorConditionFormula>!ISNUMBER(CodePoint__c)</errorConditionFormula>
    <errorDisplayField>CodePoint__c</errorDisplayField>
    <errorMessage>This value must be a number</errorMessage>
</ValidationRule>