force-app/main/default/objects/AnyAsciiMapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodePoint__c</columns>
    <columns>IsBlankSpace__c</columns>
    <columns>InputValue__c</columns>
    <columns>OutputValue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>